--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   padding-left: 50px;
   padding-top: 10px;
   margin-right: 25px;
-  background: linear-gradient(#4d4d4d 50%, #414141, #495666);
+  background: linear-gradient(#4d4d4d 50%, #4c535c, #495666);
 }
 .img {
   border: solid 10px;
