--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
   padding-top: 10px;
   margin-right: 25px;
   background: linear-gradient(#4d4d4d 50%, #4c535c, #495666);
+  display: flex;
+  flex-direction: column;
 }
 .img {
   border: solid 10px;
@@ -20,12 +22,18 @@ body {
   border: solid 10px darkgrey;
   border-color: #686868;
   border-radius: 100px;
-  width: 1500px;
+  max-width: 1500px;
   height: 110px;
   background-color: darkgray;
   text-align: center;
   font-family: Georgia, 'Times New Roman', Times, serif;
   box-shadow: 0 0 20px #00ffff;
+  z-index: 0;
+  display: flex;
+  padding-left: 150px;
+  flex-grow: 2;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .img2 {
   width: 150px;
@@ -53,4 +61,23 @@ filter: brightness(130%);
 img:hover {
 filter: hue-rotate(10deg);
 filter: brightness(115%);
+}
+* {
+scroll-behavior: smooth;
+}
+.link-b {
+  font-size: 32px;
+}
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+.imgFC {
+  width: 300px;
+  height: 300px;
+  border-radius: 75px;
+  object-fit: cover;
 }
