--- a/style.css
+++ b/style.css
@@ -13,27 +13,27 @@ body {
   border: solid 10px;
   height: 100px; width: 100px; border-radius: 100px;
   border-color: #686868;
-  position: absolute;
-  z-index: 1;
-  top: 43px;
-  left: 60px;
 }
 .header {
   border: solid 10px darkgrey;
   border-color: #686868;
   border-radius: 100px;
   max-width: 1500px;
-  height: 110px;
+  min-width: 500px;
+  min-height: 90px;
+  max-height: 200px;
   background-color: darkgray;
   text-align: center;
   font-family: Georgia, 'Times New Roman', Times, serif;
   box-shadow: 0 0 20px #00ffff;
-  z-index: 0;
   display: flex;
+  flex-direction: column;
   padding-left: 0px;
   flex-grow: 2;
   flex-wrap: wrap;
   justify-content: center;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .img2 {
   width: 150px;
