--- a/contact-styles.css
+++ b/contact-styles.css
@@ -71,3 +71,73 @@ body {
   padding-bottom: 0;
   z-index: -2;
 }
+body {
+  background-color: rgb(245, 245, 245);
+  font-family: Aldrich, monospace;
+  margin: 0;
+}
+
+.top-bar {
+  width: 100vw;
+  height: 7.5vh;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+  background-color: rgb(211, 211, 211);
+  padding-left: 1.5vw;
+  overflow: hidden;
+}
+@media (max-width: 1000px) {
+  .top-bar {
+    height: 10vh;
+    flex-shrink: 2;
+  }
+}
+@media (max-width: 1500px) {
+  .top-bar {
+    height: 10vh;
+  }
+}
+@media (max-width: 500px) {
+  .top-bar {
+    gap: 15px;
+  }
+}
+.home:hover,
+.logo-text:hover,
+.nav-bar-option:hover,
+.games:hover,
+.contact:hover {
+  transform: scale(125%);
+  font-weight: bold;
+}
+.nav-bar-option:hover {
+  top: 25px;
+}
+a {
+  color: black;
+  text-decoration: none;
+}
+.nav-bar-option {
+  position: relative;
+  top: 17.5px;
+}
+.logo {
+  position: relative;
+
+  top: 4px;
+  left: 0px;
+  font-weight: bold;
+}
+.logo-text {
+  position: relative;
+  top: -10px;
+}
+.fa-gamepad {
+  position: relative;
+  top: 2px;
+}
+.games-selection {
+  display: grid;
+}
