--- a/contact-styles.css
+++ b/contact-styles.css
@@ -1,91 +1,54 @@
 body {
-  background-color: white;
+  background-color: rgb(245, 245, 245);
+  font-family: Aldrich, monospace;
 }
-.line {
-  width: 33vw;
-  height: 1vh;
-  background-color: darkcyan;
-  position: absolute;
-  top: 50%;
-  left: 33%;
-  animation-name: line-spin;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+.home:hover,
+.logo-text:hover,
+.nav-bar-option:hover,
+.games:hover,
+.contact:hover {
+  transform: scale(125%);
+  font-weight: bold;
 }
-.line:hover {
-  animation-name: color-change;
-  animation-duration: 4s;
-  animation-iteration-count: 1;
+.nav-bar-option:hover {
+  top: 25px;
 }
-@keyframes line-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(90deg);
-  }
-  100% {
-    transform: rotate(180deg);
-  }
+a {
+  color: black;
+  text-decoration: none;
 }
-@keyframes color-change {
-  0% {
-    background-color: darkcyan;
-  }
-  25% {
-    background-color: rgb(0, 167, 167);
-  }
-  75% {
-    background-color: cyan;
-  }
-  100% {
-    background-color: darkcyan;
-  }
+.nav-bar-option {
+  position: relative;
+  top: 17.5px;
 }
-.bar {
-  width: 100px;
-  height: 100px;
-  padding-left: 500px;
-  background-color: rgb(185, 185, 185);
-  transition-property: top, bottom;
-  position: absolute;
-  top: 31%;
-  left: 27.5%;
-  z-index: -1;
+.logo {
+  position: relative;
+
+  top: 4px;
+  left: 0px;
+  font-weight: bold;
 }
-.dog {
-  width: 100px;
-  height: 200px;
-  object-fit: cover;
-  position: absolute;
-  left: 45%;
-  top: 25%;
-  z-index: -2;
-  transition-property: top;
-  transition-duration: 3s;
-  padding-bottom: 150px;
+.logo-text {
+  position: relative;
+  top: -10px;
 }
-.dog:hover {
-  top: 16%;
-  padding-bottom: 0;
-  z-index: -2;
+.fa-gamepad {
+  position: relative;
+  top: 2px;
 }
-@media (max-width: 500px) {
-  .bar {
-    padding-bottom: 50px;
-  }
+.games-selection {
+  display: grid;
 }
 body {
   background-color: rgb(245, 245, 245);
   font-family: Aldrich, monospace;
   margin: 0;
 }
-
 .top-bar {
   width: 100vw;
   height: 7.5vh;
   position: fixed;
+  top: 0;
   display: flex;
   flex-direction: row;
   gap: 25px;
@@ -143,6 +106,6 @@ a {
   position: relative;
   top: 2px;
 }
-.games-selection {
-  display: grid;
+.grid-contact {
+  margin-left: 35%;
 }
