--- a/contact-styles.css
+++ b/contact-styles.css
@@ -104,3 +104,22 @@ a {
   border-left: none;
   border-right: none;
 }
+
+.profile-pic {
+  height: 76px;
+  border: 6px double rgb(97, 97, 97);
+  padding: 10px;
+}
+
+.profile-pic:hover {
+  animation-name: contact-img;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  animation-delay: 1s;
+}
+
+@keyframes contact-img {
+  33% {
+    transform: rotateY(180deg);
+  }
+}
