--- a/snake-styles.css
+++ b/snake-styles.css
@@ -2,19 +2,15 @@ body {
   background-color: rgb(245, 245, 245);
   font-family: Aldrich, monospace;
   margin: 0;
-  font-size: 100%;
 }
-body div {
-  position: absolute;
-}
-
 .top-bar {
   width: 100vw;
   height: 7.5vh;
   position: fixed;
+  top: 0;
   display: flex;
   flex-direction: row;
-  gap: 2.5%;
+  gap: 25px;
   background-color: rgb(211, 211, 211);
   padding-left: 1.5vw;
   overflow: hidden;
@@ -32,7 +28,7 @@ body div {
 }
 @media (max-width: 500px) {
   .top-bar {
-    gap: 5px;
+    gap: 15px;
   }
 }
 .home:hover,
@@ -56,6 +52,7 @@ a {
 }
 .logo {
   position: relative;
+
   top: 10px;
   left: 0px;
   font-weight: bold;
