--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,12 @@ body {
   background-color: rgb(245, 245, 245);
   font-family: Aldrich, monospace;
   margin: 0;
-  font-size: 100%;
 }
-
 .top-bar {
   width: 100vw;
   height: 7.5vh;
   position: fixed;
+  top: 0;
   display: flex;
   flex-direction: row;
   gap: 25px;
@@ -29,7 +28,7 @@ body {
 }
 @media (max-width: 500px) {
   .top-bar {
-    gap: 5px;
+    gap: 15px;
   }
 }
 .home:hover,
@@ -53,6 +52,7 @@ a {
 }
 .logo {
   position: relative;
+
   top: 10px;
   left: 0px;
   font-weight: bold;
