--- a/snake-styles.css
+++ b/snake-styles.css
@@ -14,6 +14,7 @@ body {
   background-color: rgb(211, 211, 211);
   padding-left: 1.5vw;
   overflow: hidden;
+  z-index: 11;
 }
 @media (max-width: 1000px) {
   .top-bar {
@@ -36,6 +37,7 @@ body {
 .nav-bar-option:hover,
 .games:hover,
 .contact:hover {
+  transition: all 1s ease-in-out;
   transform: scale(125%);
   font-weight: bold;
 }
@@ -69,7 +71,7 @@ a {
 .game {
   width: 512px;
   height: 512px;
-  border: 3vw solid rgb(143, 167, 113);
+  border: 3vw solid rgb(117, 146, 83);
   border-radius: 5%;
   background-image: url(GrassV2.png);
   position: absolute;
@@ -92,4 +94,20 @@ a {
   justify-content: center;
   align-items: center;
   z-index: -1;
+}
+
+.nav-bar {
+  width: 10vw;
+  height: 7.5vh;
+  border-radius: 5%;
+  z-index: 10;
+  background-color: rgb(211, 211, 211);
+  position: fixed;
+  top: 5%;
+  left: 0%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1vw;
+  visibility: hidden;
 }
