--- a/snake-styles.css
+++ b/snake-styles.css
@@ -54,7 +54,6 @@ a {
 }
 .logo {
   position: relative;
-
   top: 10px;
   left: 0px;
   font-weight: bold;
@@ -73,7 +72,7 @@ a {
   height: 70vh;
   border: 3vw solid rgb(117, 146, 83);
   border-radius: 5%;
-  background-image: url(/images/grassv2.png);
+  background-image: url(GrassV2.png);
   position: absolute;
   top: 10%;
   display: flex;
@@ -107,11 +106,7 @@ a {
   left: 0%;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-end;
+  align-items: center;
   gap: 1vw;
-  visibility: hidden;
-}
-
-.nav-bar p {
-  z-index: 13;
+  display: none;
 }
