--- a/contact-styles.css
+++ b/contact-styles.css
@@ -142,3 +142,10 @@ a {
   gap: 1vw;
   display: none;
 }
+
+@media all and (max-width: 1367px) {
+  .nav-bar {
+    align-items: flex-end;
+  }
+}
+
