--- a/snake-styles.css
+++ b/snake-styles.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: rgb(245, 245, 245);
   font-family: Aldrich, monospace;
@@ -15,7 +14,7 @@ body {
   background-color: rgb(211, 211, 211);
   padding-left: 1.5vw;
   overflow: hidden;
-  z-index: 12;
+  z-index: 24;
 }
 @media (max-width: 1000px) {
   .top-bar {
@@ -102,11 +101,12 @@ a {
   z-index: -1;
   font-family: Pixel;
   overflow: hidden;
+  transform: scale(90%);
 }
 
 @font-face {
-  font-family: "Pixel";
-  src: url("/04B_30__.TTF");
+  font-family: "Pixel"; /*a name to be used later*/
+  src: url("/04B_30__.TTF"); /*URL to font*/
 }
 
 .nav-bar {
