--- a/contact-styles.css
+++ b/contact-styles.css
@@ -2,6 +2,7 @@ body {
   background-color: rgb(245, 245, 245);
   font-family: Aldrich, monospace;
   margin: 0;
+  transition: all 1s ease-out;
 }
 .top-bar {
   width: 100vw;
@@ -15,6 +16,7 @@ body {
   padding-left: 1.5vw;
   overflow: hidden;
   z-index: 12;
+  transition: all 1s ease-out;
 }
 @media (max-width: 1000px) {
   .top-bar {
@@ -43,9 +45,15 @@ body {
 .nav-bar-option:hover {
   top: 25px;
 }
+
+.nav-bar {
+  transition: all 1s ease-out;
+}
+
 a {
   color: black;
   text-decoration: none;
+  transition: all 1s ease-out;
 }
 .nav-bar-option {
   position: relative;
@@ -65,6 +73,7 @@ a {
   position: relative;
   top: 2px;
 }
+
 .home,
 .logo-text,
 .logo,
@@ -81,9 +90,13 @@ a {
   align-items: center;
 }
 .contact-info {
-  height: 10vh;
+  height: 12.5vh;
   padding: 1.25vh;
   border: 6px double rgb(97, 97, 97);
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .contact-info:hover {
   animation-name: contact;
@@ -102,22 +115,21 @@ a {
   background-color: hsl(212, 22%, 51%);
 }
 .virtual-text {
-  height: 10vh;
+  height: 20vh;
   width: 100vw;
   background-color: rgb(150, 150, 150);
   font-family: "Roboto", monospace;
   font-weight: 900;
   border: 2% groove rgb(34, 34, 34);
-  color: rgb(0, 0, 0);
   border-left: none;
   border-right: none;
 }
 
 .profile-pic {
-  height: 10vh;
+  height: 12.5vh;
   border: 6px double rgb(97, 97, 97);
   padding: 1.25vh;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .profile-pic:hover {
