--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
   background-color: rgb(245, 245, 245);
   font-family: Aldrich, monospace;
   margin: 0;
-  transition: all 1s ease-in-out;
 }
 .top-bar {
   width: 100vw;
@@ -16,7 +15,6 @@ body {
   padding-left: 1.5vw;
   overflow: hidden;
   z-index: 12;
- transition: all, 1s ease-out;
 }
 
 @media (max-width: 1000px) {
@@ -49,7 +47,6 @@ body {
 a {
   color: black;
   text-decoration: none;
-  transition: all 1s ease-out;
 }
 .nav-bar-option {
   position: relative;
@@ -73,6 +70,7 @@ a {
   top: 2px;
 }
 
+/*
 .home,
 .logo-text,
 .logo,
@@ -80,7 +78,7 @@ a {
 .games,
 .contact {
   transition: all 1s ease-out;
-}
+} */
 
 .games-selection {
   display: flex;
@@ -102,7 +100,6 @@ a {
   justify-content: center;
   align-items: center;
   object-fit: cover;
-  transition: all 1s ease-in-out;
 }
 
 .item:hover {
@@ -111,7 +108,6 @@ a {
 .item img {
   width: 100%;
   height: 100%;
-  transition: all 1s ease-in-out;
 }
 
 @keyframes wiggle {
@@ -137,7 +133,6 @@ a {
   align-items: center;
   gap: 1vw;
   display: none;
-  transition: all, 1s ease-out;
 }
 
 @media all and (max-width: 1367px) {
