--- a/snake-styles.css
+++ b/snake-styles.css
@@ -2,7 +2,6 @@ body {
   background-color: rgb(245, 245, 245);
   font-family: Aldrich, monospace;
   margin: 0;
-  transition: all 1s ease-in-out;
 }
 .top-bar {
   width: 100vw;
@@ -16,7 +15,6 @@ body {
   padding-left: 1.5vw;
   overflow: hidden;
   z-index: 24;
-  transition: all 1s ease-out;
 }
 @media (max-width: 1000px) {
   .top-bar {
@@ -48,7 +46,6 @@ body {
 a {
   color: black;
   text-decoration: none;
-  transition: all 1s ease-in-out;
 }
 .nav-bar-option {
   position: relative;
@@ -67,15 +64,6 @@ a {
 .fa-gamepad {
   position: relative;
   top: 2px;
-}
-
-.home,
-.logo-text,
-.logo,
-.nav-bar-option,
-.games,
-.contact {
-  transition: all 1s ease-out;
 }
 
 .game {
@@ -127,7 +115,6 @@ a {
   align-items: center;
   gap: 1vw;
   display: none;
-  transition: all 1s ease-out;
 }
 
 @media all and (max-width: 1370px) {
@@ -170,20 +157,21 @@ a {
   margin-left: 5px;
   border: 4px groove rgb(117, 146, 83);
   border-radius: 10%;
-  width: 220px;
+  width: 210px;
   height: 45px;
   transition: all 1s ease-in-out;
   text-align: center;
   transform: scale(102%);
   position: relative;
-  left: 2.5%;
+  left: 2.75%;
+  font-size: 107.5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ui2 :nth-child(2) {
-  width: 150px;
-  height: 20px;
-  position: relative;
-  left: 15%;
+  font-size: 145%;
 }
 
 .ui2 p:hover {
